--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.17.0",
+    "framer-motion": "^11.3.13",
     "next": "14.2.5",
     "prisma": "^5.17.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "slugify": "^1.6.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
